# substrate-benchmark

./: .gitignore  Cargo.toml  README.md  config.toml  docker_testnet_setup.md  hotstuff_keys  stat_hotstuff.md  stat_substrate.md  substrate_keys
docker-compose/: hotstuff_docker_compose.yml  hotstuff_docker_compose_12_nodes.yml  hotstuff_docker_compose_24_nodes.yml  hotstuff_docker_compose_48_nodes.yml  hotstuff_docker_compose_6_nodes.yml  substrate_docker_compose.yml  substrate_docker_compose_12_nodes.yml  substrate_docker_compose_24_nodes.yml  substrate_docker_compose_48_nodes.yml  substrate_docker_compose_6_nodes.yml
hotstuff_spec/: hotstuff_chain_spec.json  hotstuff_chain_spec_24.json  hotstuff_chain_spec_6.json
hotstuff_volume/node_1/chains/local_testnet/network/: secret_ed25519
hotstuff_volume/node_10/chains/local_testnet/network/: secret_ed25519
hotstuff_volume/node_11/chains/local_testnet/network/: secret_ed25519
hotstuff_volume/node_12/chains/local_testnet/network/: secret_ed25519
hotstuff_volume/node_2/chains/local_testnet/network/: secret_ed25519
hotstuff_volume/node_3/chains/local_testnet/network/: secret_ed25519
metadata/: hotstuff_metadata.scale  substrate_metadata.scale
scriptes/: basic_run_node.sh  clear_hotstuff_db.sh  clear_substrate_db.sh  hotstuff_key_generate.sh  substrate_key_generate.sh
src/: account.rs  client.rs  main.rs  metrics.rs
substrate_spec/: substrate_chain_spec.json  substrate_chain_spec_24.json  substrate_chain_spec_48.json  substrate_chain_spec_6.json
(+13 files in other folders)
