[package]
name = "substrate-benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subxt = "0.32.1"
subxt-signer = {version = "0.32.1", features = ["subxt"]}

anyhow = "1.0.75"
tokio = {version = "1.33.0", features = ["macros", "time", "rt-multi-thread"]}
futures = "0.3.28"

[features]
substrate=[]
hotstuff=[]